--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+        <!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
         <style>
             .home__social a{
                 
@@ -33,6 +36,8 @@
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                         <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
+                        <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
+
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                     </ul>
                 </div>
@@ -193,6 +198,58 @@
                     </a>
                 </div>
             </section>
+
+            <!--===== PROJECTS =====-->
+<section class="project section" id="projects">
+    <h2 class="section-title text-center mb-5">Projects</h2>
+
+    <div class="container">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+
+            <div class="col">
+                <div class="card h-100">
+                    <img src="assets/img/hrms.png" class="card-img-top" alt="HR Management System">
+                    <div class="card-body">
+                        <h5 class="card-title">HR Management System</h5>
+                        <p class="card-text">A web system for managing employees, attendance, and payroll with role-based login.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card h-100">
+                    <img src="assets/img/portfolio.PNG" class="card-img-top" alt="Portfolio Website">
+                    <div class="card-body">
+                        <h5 class="card-title">Portfolio Website</h5>
+                        <p class="card-text">Personal portfolio site built with HTML, CSS, and JavaScript to showcase my projects.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card h-100">
+                    <img src="assets/img/snakegame.png" class="card-img-top" alt="Snake Game">
+                    <div class="card-body">
+                        <h5 class="card-title">Snake Game</h5>
+                        <p class="card-text">Classic snake game with mobile/keyboard controls, 3D design, and high score tracking.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card h-100">
+                    <img src="assets/img/logreg.png" class="card-img-top" alt="Login System">
+                    <div class="card-body">
+                        <h5 class="card-title">Login & Register System</h5>
+                        <p class="card-text">Responsive user authentication system using PHP and MySQL with role-based redirection.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
 
             <!--===== CONTACT =====-->
             <section class="contact section" id="contact">
